--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,8 +3,8 @@ imports:
     - { resource: security.yml }
 
 parameters:
-    sonata.user.admin.user.class: YourVendor\YourBundle\Admin\UserAdmin
-    sonata.user.admin.user.entity: YourVendor\YourBundle\Entity\User
+    sonata.user.admin.user.class: Iag\UserBundle\Admin\UserAdmin
+    sonata.user.admin.user.entity: Iag\UserBundle\Entity\User
 
 services:
     sonata.user.admin.group:
@@ -39,10 +39,25 @@ twig:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        [ ]
+    bundles:        [ IagHomeBundle ]
     #java: /usr/bin/java
     filters:
+        less:
+            node: /usr/bin/node
+            node_paths: [/usr/lib/node_modules]
+            apply_to: "\.less$"
         cssrewrite: ~
+        
+braincrafted_bootstrap:
+    assets_dir: %kernel.root_dir%/../vendor/twbs/bootstrap
+    jquery_path: %kernel.root_dir%/../vendor/jquery/jquery/jquery-1.11.3.js
+    less_filter: less
+    fonts_dir: %kernel.root_dir%/../web/fonts
+    auto_configure:
+        assetic: true
+        twig: true
+        knp_menu: true
+        knp_paginator: true  
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         #yui_css:
@@ -78,7 +93,7 @@ swiftmailer:
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: secure_area
-    user_class: YourVendor\YourBundle\Entity\User
+    user_class: Iag\UserBundle\Entity\User
     registration:
         confirmation:
             enabled:    false # change to true for required email confirmation
