--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "knplabs/knp-paginator-bundle": "dev-master",
         "sonata-project/admin-bundle": "dev-master",
         "sonata-project/user-bundle": "2.2.x-dev",
-        "sonata-project/doctrine-orm-admin-bundle": "~2.2"
+        "sonata-project/doctrine-orm-admin-bundle": "~2.2",
+        "braincrafted/bootstrap-bundle": "^2.1",
+        "twbs/bootstrap": "^3.3"
 
     },
     "scripts": {
